--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,21 @@
 language: node_js
 node_js:
-  - "stable"
-cache:
-  directories:
+  - 12.18.0
+cache: yarn
+
+install:
+  - yarn install
+
+directories:
     - node_modules
+
 script:
-  - npm test
+  - yarn test
   - npm run build
 
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  on:
+    branch: gh-pages
