--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.3",
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "lego-data": "^1.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.1.0",
     "react-icons": "^3.10.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-modal": "^3.11.2",
     "react-scripts": "3.4.1"
   },
@@ -39,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
