--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: node_js
 node_js:
-  - 12.18.0
-cache: yarn
+  - 12.18.1
+cache: npm
 
 install:
-  - yarn install
+  - npm install
 
 directories:
     - node_modules
 
 script:
-  - yarn test
+  - npm test
   - npm run build
 
 deploy:
