--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "homepage": "https://pokedex-project-yertis.netlify.app",
   "version": "0.1.0",
   "private": true,
   "engines": {
